tests/negative/258/M.juvix
module M;

type Nat :=
  | O : Nat
  | S : Nat -> Nat;

fun : Nat -> Nat
  | (S {S {x}}) := x;

